--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-insights": "~0.8.1",
     "expo-linking": "~7.0.3",
     "expo-notifications": "~0.29.11",
     "expo-router": "~4.0.14",
